--- a/PID.ioc
+++ b/PID.ioc
@@ -31,18 +31,19 @@ Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH0 - OSC_IN
-Mcu.Pin10=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin11=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin12=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin13=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PH1 - OSC_OUT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA6
-Mcu.Pin5=PA11
-Mcu.Pin6=PA12
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=13
+Mcu.Pin5=PB12
+Mcu.Pin6=PA11
+Mcu.Pin7=PA12
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -73,6 +74,10 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=pwm
 PA6.Signal=S_TIM3_CH1
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=enable_read
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=led
 PC13-ANTI_TAMP.Locked=true
@@ -113,7 +118,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
